--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -4,5 +4,8 @@ run:
 build:
 	go build -o bin/main main.go
 
+start:
+	./bin/main
+
 generate:
 	oapi-codegen -config .oapi-codegen.yaml ../../packages/openapi/schema.yaml
