--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,11 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
+    "start": {
+      "dependsOn": ["build"],
+      "cache": false,
+      "persistent": true
+    },
     "lint": {
       "outputs": []
     },
