--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,8 +8,9 @@ services:
       POSTGRES_DB: commitly
       POSTGRES_USER: commitly
       POSTGRES_PASSWORD: commitly
+      PGPORT: "5433"
     ports:
-      - "5432:5432"
+      - "5433:5433"
     volumes:
       - commitly_data:/var/lib/postgresql/data
 
