--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "turbo lint",
     "format": "turbo format",
     "openapi:generate": "turbo openapi:generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "turbo test"
   },
   "keywords": [],
   "author": "",
