--- a/packages/openapi/package.json
+++ b/packages/openapi/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "swagger2openapi": "^7.0.8"
+  }
 }
